Apparently manual editing of argLine affects the JaCoCo Agent